2008-03-06  Lassi A. Tuura  <lat@iki.fi>

	* BuildFile: Remove optimisation kill override.

	* IgProfPerf.cc: Fix SIG_SETMASK logic; this sets the signal mask,
	not the signals allowed, so force the profiling signal out of the
	mask rather than forcing it in.  Improve debug output when signal
	handling overrides take place.

	* IgProf.cc (enabled, enable, disable): Make it more obvious that
	the profiling engine is disabled when thread-local flag is
	modified, but does not yet exist (while the thread is created).

2008-03-06  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc (enable, disable): Protect against activity for
	thread-local actions before the thread has been fully initialised.
	* IgProfTrace.h (freestart_, freeend_): Remove unused fields.
	* IgProfTrace.cc (mergeFrom): Fix various data traversal bugs.
	(debugDumpStack): Print more details about which value is which.
	(debugDump): Do print out the stack dump.

2008-03-06  Lassi A. Tuura  <lat@iki.fi>

	* Re-implement the handling of internal profiling buffers to
	reduce memory consumption for memory-heavy applications.
	Not entirely functional yet.
	* IgProfBuffer.h, IgProfBuffer.cc: New buffer core.
	* IgProfSymCache.h, IgProfSymCache.cc: Separate symbol caches.
	* IgProfTrace.h, IgProfTrace.cc: Simplify, just grow the buffer
	piece-meal as more data is added.  Remove ability to relocate the
	buffer and to do symbol mappings; we do the latter at the end.
	* IgProfMem.cc, IgProfFileDesc.cc, IgProfPerf.cc: Adjust.
	* IgProf.h, IgProf.cc: Adjust.  Provide separate global and
	per-thread enabled/disabled states.
	* IgProfPool.h, IgProfPool.cc: Removed.

2007-11-27  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Resolve pure file names against $PATH.  This
	usually just the binary names, and it is better to attempt the
	path search than not to find the file at all for symbol check.

	* IgProfPerf.cc: Hook 'sigaction' and prevent profiler signal from