@@ -1,26 +1,0 @@
-#ifndef IG_PROF_IG_PROF_PERF_H
-# define IG_PROF_IG_PROF_PERF_H
-
-//<<<<<< INCLUDES                                                       >>>>>>
-//<<<<<< PUBLIC DEFINES                                                 >>>>>>
-//<<<<<< PUBLIC CONSTANTS                                               >>>>>>
-//<<<<<< PUBLIC TYPES                                                   >>>>>>
-//<<<<<< PUBLIC VARIABLES                                               >>>>>>
-//<<<<<< PUBLIC FUNCTIONS                                               >>>>>>
-//<<<<<< CLASS DECLARATIONS                                             >>>>>>
-
-class IgProfPerf
-{
-public:
-    static void initialize (void);
-    static void enable (void);
-    static void disable (void);
-
-private:
-    static void threadInit (void);
-};
-
-//<<<<<< INLINE PUBLIC FUNCTIONS                                        >>>>>>
-//<<<<<< INLINE MEMBER FUNCTIONS                                        >>>>>>
-
-#endif // IG_PROF_IG_PROF_PERF_H
